2021-01-10  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rewrite AlphaMap recalc.

	* datrie/alpha-map.c (alpha_map_recalc_work_area):
	  Rewrite alpha-to-trie & trie-to-alpha maps recalculation
	  - For clearer relation between the two maps
	  - To allow other TRIE_CHAR_TERM values than zero

2021-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use TRIE_CHAR_TERM macro instead of zero.

	* datrie/alpha-map.c
	  (alpha_map_char_to_trie, alpha_map_char_to_trie_str):
	* datrie/trie.c (trie_branch_in_branch, trie_branch_in_tail):
	* datrie/tail.c (tail_walk_str, tail_walk_char):
	  - Use TRIE_CHAR_TERM instead of hard-wired zero when working
	    with raw trie string termination.
	* datrie/trie-string.c (trie_string_terminate):
	  - Append TRIE_CHAR_TERM instead of simply delegating to
	    dstring_terminate().

2021-01-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Share static trie string functions internally.

	* datrie/trie-string.h, datrie/trie-string.c, datrie/tail.c
	  (tc_strlen -> trie_char_strlen, tc_strdup -> trie_char_strdup):
	  - Move private functions in tail.c to trie-string.[ch],
	    with new full names under new "static trie string" section.
	  - Check/assign string terminator using TRIE_CHAR_TERM
	    instead of zero.
	* datrie/tail.c (tail_set_suffix):
	  - Call the new trie_char_strdup() instead of tc_strdup().
	* datrie/alpha-map.c (alpha_map_trie_to_char_str):
	  - Call trie_char_strlen() instead of strlen().

2021-01-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Get rid of char semantics from TrieChar

	* datrie/trie.c (trie_branch_in_branch, trie_branch_in_tail):
	  - Check null TrieChar with int zero instead of char.

2021-01-05  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use proper #include form in installed header.

	* datrie/alpha-map.h:
	  - Use angle quotes form instead of double quotes in #include.

2021-01-05  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix some documentations.
